fix: overflow issue, min-screensize 350px

--- a/Frontend/react/src/style.css
+++ b/Frontend/react/src/style.css
@@ -208,7 +208,7 @@ header .upper-home::before {
 }
 
 header .upper-home .upperhome-box {
-  width: 500px;
+  /* width: 500px; */
   height: auto;
   color: black;
   padding: 50px;
@@ -233,14 +233,16 @@ margin: 300px auto;
 .search_bar,
 .search_bar_results {
 display: flex;
-gap:20px;
-width: 80%;
+/* gap:20px; */
+width: 100%;
 }
 
 .home-search {
 display: flex;
 align-items: center;
 min-width: fit-content;
+/* width: 100%; */
+/* max-width: 400px; */
 /* gap: 40px; */
 padding: 10px 30px;
 margin: auto;
@@ -258,7 +260,7 @@ outline: none;
 border:none;
 border-radius: 20px;
 width: 90%;
-min-width: 140px;
+min-width: 115px;
 background-color: #fff;
 color: hsl(228, 15%, 50%);
 padding: 15px 20px;
@@ -271,6 +273,14 @@ box-shadow: 0 0 5px hsl(228, 66%, 53%);
 .home-search i {
 font-size: 1.25rem;
 color: hsl(228, 66%, 53%);
+}
+
+.home-search button {
+  min-width:fit-content;
+}
+
+.home-search button i{
+  color: white;
 }
 
 .search_bar > button {
